--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "start": "nodemon  server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.54.0",
+    "aws-sdk": "^2.406.0",
     "babel-register": "^6.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.2",
@@ -18,6 +20,7 @@
     "express-validator": "^5.3.0",
     "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
+    "googleapis": "^105.0.0",
     "gridfs-stream": "^1.1.1",
     "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.1.0",
@@ -28,14 +31,13 @@
     "mongoose": "^5.4.19",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.7.7",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
     "request": "^2.88.2",
-    "aws-sdk": "^2.406.0",
-    "@aws-sdk/client-s3": "^3.54.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
